add unit tests, fix pom